--- a/builder/build.gradle
+++ b/builder/build.gradle
@@ -1,20 +1,13 @@
-apply plugin: 'java'
+apply plugin: 'com.android.model.library'
 
-repositories {
-    jcenter()
-}
+model {
+    android {
+        compileSdkVersion = 23
+        buildToolsVersion = "23.0.2"
 
-dependencies {
-    compile 'org.gradle:gradle-tooling-api:+'
-    compile 'org.slf4j:slf4j-api:1.7.7'
-    compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.1.201506240215-r'
-    compile 'com.google.guava:guava:+'
-    testCompile 'junit:junit:4.12'
-}
-
-test {
-    testLogging {
-        exceptionFormat 'full'
-        showStandardStreams = true
+        defaultConfig.with {
+            minSdkVersion.apiLevel = 19
+            targetSdkVersion.apiLevel = 19
+        }
     }
 }
