--- a/builder/build.gradle
+++ b/builder/build.gradle
@@ -1,13 +1,26 @@
-apply plugin: 'com.android.model.library'
-
 model {
-    android {
-        compileSdkVersion = 23
-        buildToolsVersion = "23.0.2"
 
-        defaultConfig.with {
-            minSdkVersion.apiLevel = 19
-            targetSdkVersion.apiLevel = 19
-        }
+android {
+            compileSdkVersion = 23
+            buildToolsVersion = "23.0.2"
+
+            defaultConfig.with {
+                minSdkVersion.apiLevel = 19
+                targetSdkVersion.apiLevel = 19
+            }
+
+
+   android.buildTypes {
+    release {
+        minifyEnabled = false
+        proguardFiles.add(file("proguard-rules.pro"))
+         }
+     }
+    android.productFlavors {
+       //
+    }
+
+    android.sources {
+        //
     }
 }
