--- a/builder/build.gradle
+++ b/builder/build.gradle
@@ -1,26 +1,13 @@
-model {
+apply plugin: 'java'
 
-android {
-            compileSdkVersion = 23
-            buildToolsVersion = "23.0.2"
+repositories {
+    jcenter()
+}
 
-            defaultConfig.with {
-                minSdkVersion.apiLevel = 19
-                targetSdkVersion.apiLevel = 19
-            }
-
-
-   android.buildTypes {
-    release {
-        minifyEnabled = false
-        proguardFiles.add(file("proguard-rules.pro"))
-         }
-     }
-    android.productFlavors {
-       //
-    }
-
-    android.sources {
-        //
-    }
+dependencies {
+    compile 'org.gradle:gradle-tooling-api:+'
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.1.201506240215-r'
+    compile 'com.google.guava:guava:+'
+    testCompile 'junit:junit:4.12'
 }
