--- a/builder/local.properties
+++ b/builder/local.properties
@@ -1,3 +1,1 @@
-export ANDROID_HOME=/opt/android-sdk
-export PATH=$ANDROID_HOME/platform-tools:$PATH
-export PATH=$ANDROID_HOME/tools:$PATH
+sdk.dir=/opt/android-sdk
